--- a/index.css
+++ b/index.css
@@ -246,66 +246,262 @@ body {
   background-position: center;
   background-repeat: no-repeat;
 }
+.main-contact {
+  padding: 100px 0;
+}
 
-@media screen and (max-width: 768px) {
-  body {
-    padding-left:  26px !important;
-    padding-right: 26px !important;
-    box-sizing: border-box !important; 
-    background: url('./Background\ 4.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .menu {
-    gap: 30px;
-  }
-  .main-contain-about {
-    margin-top: 50px;
-    flex-direction: column;
-    gap: 50px;
-  }
-  .round-1 {
-    width: 300px;
-    height: 350px;
-  }
-  .round-2 {
-    width: 200px;
-    height: 250px;
-  }
+.heading--contact {
+  display: flex;
+}
 
-  .main-contain-about p {
-    margin-top: 30px;
-  }
-  .home {
-    top: -40px;
-    left: calc(50% - 15px);
-  }
+.input-field {
+  padding: 15px 20px 15px;
+  display: flex;
+  background: transparent;
+  border: white 1px solid;
+  border-radius: 10px;
+  backdrop-filter: blur(20px);
+  outline: none !important;
+  color: white;
+}
 
-  .main-contain-work li{
-    width: 100%;
-  }
-  .form {
-    display: grid;
-    gap: 20px;
-    grid-template-areas:
-      'i1' 
-      'i2' 
-      'i3'
-      'i4';
-    width: 100%;
-  }
+.area {
+  height: 300px;
+}
+
+.main-contact-contain,
+.main-contain {
+  align-items: center;
+  position: relative;
+}
+
+.main-contain {
+  padding-bottom: 100px;
+}
+
+.sendbutton {
+  background-color: white;
+  outline: none;
+  border: none;
+  height: 40px;
+  width: 200px;
+  color: black;
+  border-radius: 10px;
+  position: relative;
+}
+
+.sendbutton::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  display: flex;
+  bottom: -10px;
+  left: -5px;
+  position: absolute;
+  z-index: 0;
+  border: 1px solid white;
+}
+
 .social-list-icon {
-  bottom: -77px !important;
+  position: absolute;
+  bottom: 150px;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  color: white;
 }
 
-.clip {
-  height: 270px;
-  width: 270px;
+.social-icon {
+  box-sizing: unset;
+  padding: 5px;
+  border-radius: 50%;
+  border: 1px white solid;
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.main-home .heading {
-  font-size: 28px !important;
+.main-work {
+  padding: 100px 0;
 }
+  
+.main-contain-work {
+margin-top: 100px;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
+position: relative;
+padding-bottom: 50px;
+}
+
+.contain-work {
+position: relative;
+}
+
+ul {
+list-style: none;
+display: flex;
+justify-content: space-around;
+gap: 50px;
+flex-wrap: wrap;
+align-items: flex-start;
+width: 100%;
+}
+
+li {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+width: 25%;
+}
+
+.card {
+display: flex;
+flex-direction: column;
+gap: 6px;
+width: 100%;
+justify-content: flex-start;
+align-items: center;
+height: auto;
+background: transparent;
+border: none;
+}
+
+.card__image {
+height: 200px;
+width: 100%;
+background-color: transparent;
+backdrop-filter: blur(20px);
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+padding: 30px;
+}
+
+.image {
+height: 100%;
+width: 100%;
+background-position: center !important;
+background-size: contain !important;
+background-repeat: no-repeat !important;
+}
+
+p {
+font-size: 18px;
+color: white;
+}
+.main-about {
+  padding: 100px 0;
+}
+
+.main-about__image {
+  position: relative;
+}
+
+.round-1 {
+  width: 350px;
+  height: 450px;
+  border: 1px solid white;
+  border-start-start-radius: 180px;
+  border-start-end-radius: 180px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+}
+
+.round-2 {
+  width: 300px;
+  height: 400px;
+  border: 1px solid white;
+  border-start-start-radius: 180px;
+  border-start-end-radius: 180px;
+  background-image: url(https://upload.wikimedia.org/wikipedia/en/b/bd/Doraemon_character.png);
+  background-origin: content-box;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-sizing: border-box;
+}
+
+.main-contain-about {
+  margin-top: 100px;
+  position: relative;
+}
+
+.infor {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 170px;
+}
+
+.heading--about {
+  width: 100%;
+  text-align: left;
+}
+
+p {
+  color: white;
+  margin-top: 36px;
+
+}
+
+.main-infor {
+  display: flex;
+  width: 100%;
+  margin-top: 50px;
+  font-size: 24px;
+}
+
+.main-info__value,
+.main-info__title {
+  display: flex;
+  flex: 50%;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 10px;
+  align-self: flex-start;
+  color: white;
+}
+
+.main-info__value {
+  align-items: flex-end;
+  text-align: right;
+}
+
+.double-star {
+  display: flex;
+  gap: 3px;
+  align-content: flex-end;
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 99;
+  width: fit-content !important;
+}
+
+.big {
+  height: 60px !important;
+  width: 60px !important;
+}
+
+.small {
+  height: 20px !important;
+  width: 20px !important;
+  align-self: flex-end;
+}
+
+.about-wrapper {
+  position: relative;
+  width: 100%;
+  height: auto;
 }
 
 .icon-star  {
@@ -431,12 +627,81 @@ body {
 
 @media screen and (max-width: 768px) {
 .decor-bottom-left {
-    display: none;
+    display: none !important;
   }
 .decor-bottom {
-  display: none;
+  display: none !important;
 }
 .decor-top {
-  display: none;
+  display: none !important;
 }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    padding-left: 26px !important;
+    padding-right: 26px !important;
+    box-sizing: border-box !important;
+    background: url('./Background\ 4.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .menu {
+    gap: 30px !important;
+  }
+
+  .main-contain-about {
+    margin-top: 50px !important;
+    flex-direction: column;
+    gap: 50px !important;
+  }
+
+  .round-1 {
+    width: 300px !important;
+    height: 350px !important;
+  }
+
+  .round-2 {
+    width: 200px !important;
+    height: 250px !important;
+  }
+
+  .main-contain-about p {
+    margin-top: 30px !important;
+  }
+
+  .home {
+    top: -40px !important;
+    left: calc(50% - 15px) !important;
+  }
+
+  .main-contain-work li {
+    width: 100% !important;
+  }
+
+  .form {
+    display: grid;
+    gap: 20px !important;
+    grid-template-areas:
+      'i1'
+      'i2'
+      'i3'
+      'i4';
+    width: 100% !important;
+  }
+
+  .social-list-icon {
+    bottom: -77px !important;
+  }
+
+  .clip {
+    height: 270px !important;
+    width: 270px !important;
+  }
+
+  .main-home .heading {
+    font-size: 28px !important;
+  }
 }
